log
vi., 22 de abr. de 2022 11:16:08: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9031142
vi., 22 de abr. de 2022 11:25:46: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:86:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca222a6
vi., 22 de abr. de 2022 11:36:25: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
afae0ee
vi., 22 de abr. de 2022 11:41:16: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
f93fb09
